# Go

./: LICENSE  ReadMe.md
ai/: Go_AI.h  Go_AI_Multithread.h  convolution.h  convolutional_neural_network.h  node.h  thread_pool.h
docs/ai/: Leela_Zero.md
docs/go/: Go.md  Implementation_of_Go.md
docs/go/assets/: PlantUML.txt
go/: CMakeLists.txt
go/core/: Go.h  action.h  config.h  reward.h  state.h  updateState.h  zobristHash.cpp  zobristHash.h
interface/: Analysis.cpp  Analysis.h  Board.h  Controller.cpp  Controller.h  GoDemo.h  Stone.h  main.cpp
